# LangGrasp-Piper

./: .TimeRecord  .gitignore  .gitmodules  LICENSE  README.md  README_en.md  main.py  main_wo_voice.py  pyproject.toml  requirements.txt
config/: TX-cloud_API.yaml.example  d435i_camera_params.yaml  request.json
piper_d435i/: piper_touch.xml  scene.xml
piper_d435i/agilex_piper/: piper.xml
piper_d435i/realsense_d435i/: d435i_assets.xml  d435i_body.xml
script/: .TimeRecord  setup.bash  setup_wo_env.bash
src/: grasp_sequence.py
src/Vision/: __init__.py  matplotlib_workflow.py  vision_pipeline.py
src/Voice/: offline_recognize.py  online_recognize.py  record.py  voice_pipeline.py
src/ik/: __init__.py  piper_ik.py
